    capture the connection ID.
    
  - The ``ConnectionID`` field of the ``PoolEvent``
    struct takes a value of type ``int64`` instead of ``uint64``.

  To view sample event documents, see the :ref:`golang-monitoring` guides.

- The ``Session`` interface is converted to a struct. See the
  :ref:`golang-transactions` guide to learn more.

.. _version-1.15:

What's New in 1.15
------------------

The 1.15 {+driver-short+} release includes the following improvements and fixes:

- Connection churn can be mitigated by setting a client-wide timeout by
  specifying the ``timeoutMS`` connection option or by calling the
  `SetTimeout() <https://pkg.go.dev/go.mongodb.org/mongo-driver/mongo/options#ClientOptions.SetTimeout>`__
  function. When the timeout is set, the driver attempts to reuse a connection
  after an operation times out and waits for up to one second to check if
  the connection can be reused before closing it.

- Connection pool events include a ``Duration`` field to measure the checkout
  duration and total amount of time it took to establish a connection.

.. _version-1.14:

What's New in 1.14
------------------

The 1.14 {+driver-short+} release includes the following improvements and fixes:

- Go versions before 1.18 are no longer supported.

- In case of a heartbeat timeout, in-progress operations are preemptively canceled.

- Connection strings that include the ``"mongodb+srv://"`` prefix can contain capital
  letters in the SRV hostname.

.. _version-1.13:

What's New in 1.13
------------------

The 1.13 {+driver-short+} release includes the following improvements and fixes:

- Logging for server selection and SDAM. To learn more about logging, see the
  :ref:`golang-logging` documentation.

- Methods on the ``Collection`` type that allow you to manage search indexes programmatically.

- The ``event.CommandStartedEvent`` and ``event.CommandFinishedEvent`` events return