@@ -59,7 +59,7 @@ To retrieve distinct values for a specified field across a single
 collection, pass the following parameters to the ``Distinct()``
 method:
 
-- The field name you want distinct values for 
+- The field name for which you want to retrieve the distinct values 
 - A ``non-nil`` query filter specifying which documents to match
 
 .. tip::
@@ -98,7 +98,7 @@ Example
 
 The following example matches documents with an ``enrollment`` field
 value less than ``50`` and prints the distinct values
-of the ``department`` field using the ``Distinct()`` method: 
+of the ``department`` field by using the ``Distinct()`` method: 
 
 .. io-code-block::
    :copyable: true
@@ -106,26 +106,23 @@ of the ``department`` field using the ``Distinct()`` method:
    .. input::
       :language: go
 
-      results, err := coll.Distinct(context.TODO(), "department", bson.D{{"enrollment", bson.D{{"$lt", 50}}}})
-      if err != nil {
-          panic(err)
-      }
-      
-      for _, result := range results {
-          fmt.Println(result)
-      }
+	   filter := bson.D{{"enrollment", bson.D{{"$lt", 50}}}}
+
+	   var results []string
+	   coll.Distinct(context.TODO(), "department", filter).Decode(&results)
+
+	   fmt.Printf("%s\n", results)
 
    .. output::
       :language: none
       :visible: false
 
-      Earth Science
-      English
+      [Geology English]
 
 Additional Information
 ----------------------
 
-For a runnable example of retrieving distinct values, see :ref:`golang-distinct-usage-example`.
+For a runnable example that retrieves distinct values, see :ref:`golang-distinct-usage-example`.
 
 To learn about constructing a query filter, see :ref:`golang-query-document`.
 
