@@ -346,15 +346,14 @@ their related reference and API documentation.
           .. input::
              :language: go
 
-             results, err := coll.Distinct(context.TODO(), "firstName", bson.D{})
+             var results []string
+	         coll.Distinct(context.TODO(), "firstName", bson.D{}).Decode(&results)
 
           .. output::
              :language: go
              :visible: false 
-
-             Mike
-             Xiao
-             ...
+             
+             [Mike Xiao Sandy ...]
 
    * - | **Limit the Number of Documents Retrieved**
        |
