@@ -15,13 +15,13 @@ Example
 The following example performs the following on the ``movies``
 collection:
 
-- Matches documents in which the ``directors`` contains "Natalie Portman"
+- Matches documents in which the ``directors`` array contains ``"Natalie Portman"``
 - Returns distinct values of the ``title`` from the matched documents
 
 .. literalinclude:: /includes/usage-examples/code-snippets/distinct.go
    :start-after: begin distinct
    :end-before: end distinct
-   :emphasize-lines: 6
+   :emphasize-lines: 7
    :language: go
    :dedent:
 
@@ -30,8 +30,8 @@ View a `fully runnable example <{+example+}/distinct.go>`__
 Expected Result
 ---------------
 
-After you run the full example, it returns an empty slice of an
-``interface`` type that contains the following values:
+After you run the full example, it prints a slice that contains the
+following values:
 
 .. code-block:: none
    :copyable: false
