@@ -82,6 +82,9 @@ The 2.0 {+driver-short+} release includes the following improvements and fixes:
 - The ``Session`` interface is converted to a struct. See the
   :ref:`golang-transactions` guide to learn more.
 
+- The ``Distinct()`` method returns a struct that can be decoded into a
+  specified type. See the :ref:`golang-retrieve-distinct` guide to learn more.
+
 .. _version-1.15:
 
 What's New in 1.15
